# elemm

./: .gitignore  =2.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  USE_CASES.md  pyproject.toml  test_log.txt
.github/workflows/: workflow.yml
benchmarks/solaris_gauntlet/: api_elemm.py  benchmark.py  metrics_collector.py
docs/: ARCHITECTURE.md  CASE_STUDY.md  DECORATORS.md  DEPLOYMENT.md  GATEWAY.md  MCP_INTEGRATION.md  REPAIR_KIT.md  SECURITY.md
examples/: README.md  claude_desktop_config.json  experiment_ollama.py  llm-landmarks.json  mcp_bridge.py  pure_python.py
examples/basic_navigation/: server.py
examples/classic_mcp/: api.py  client_demo.py  mcp_config.json  mcp_server.py
examples/elemm_mcp/: api.py  client_demo.py  mcp_config.json  mcp_server.py
examples/enterprise_hub/: erp.py
examples/linux_admin/: guardian.py  mcp_config.json
examples/navigation_demo/: agent_drilldown.py  api.py  mcp_server.py
examples/office_management/: office_manager.py
examples/smart_home/: smarhome.py  smarthome.py
examples/synth_shop/: server.py
scratch/: debug_nav.py  demo_generator.py  manifest_ro.json  manifest_sales_full.json  manifest_sales_ro.json  test_noise.py
scratch/test_venv/: pyvenv.cfg
src/elemm/: __init__.py  base.py  cli.py  discovery.py  exceptions.py  fastapi.py  gateway.py  manifest.py  mcp.py  mcp_fastapi.py  models.py  repair.py
src/elemm/core/: context.py  discovery.py  exceptions.py  manager.py  models.py
src/elemm/integrations/fastapi/: manager.py  mcp.py  repair.py
src/elemm/mcp/: __init__.py  bridge.py  manifest.py
src/elemm_gateway/: __init__.py  cli.py  server.py
tests/: test_advanced.py  test_discovery_unit.py  test_edge_cases.py  test_fastapi.py  test_mcp.py  test_mcp_bridge_unit.py  test_navigation.py  test_repair_kit.py  test_robustness.py
