[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elemm"
version = "0.9.2"
authors = [
  { name="Marc Stöcker" },
]
description = "A protocol for autonomous LLM agents to navigate web applications via semantic landmarks."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi",
    "httpx",
]
examples = [
    "uvicorn",
    "mcp>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/v3rm1ll1on/elemm"
"Bug Tracker" = "https://github.com/v3rm1ll1on/elemm/issues"

[project.scripts]
elemm-connect = "elemm_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples*", "tests*"]
